feat : 출국 전 체크리스트 마크업 수정 및 요소 추가 - 잘못된 클래스명 수정 - li 요소 3개 더 추가하여 시안이랑 동일하게 진행

--- a/src/components/departure-checklist/departure-checklist.html
+++ b/src/components/departure-checklist/departure-checklist.html
@@ -34,8 +34,8 @@
             <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
           </div>
           <input type="checkbox" id="passportCheck-1" name="passportCheck" aria-label="여권 확인" />
-          <span class="schedule__custom-box">
-            <svg class="schedule__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
             fill="#fafafa"
               />
@@ -56,8 +56,8 @@
             <p class="checklist__description">인터넷 사용 방법은 정하셨나요?</p>
           </div>
           <input type="checkbox" id="passportCheck-2" name="passportCheck" aria-label="유심 구매 또는 통신사 로밍하기" />
-          <span class="schedule__custom-box">
-            <svg class="schedule__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
             fill="#fafafa"
               />
@@ -78,8 +78,74 @@
             <p class="checklist__description">예약 바우처 할인 적용 확인하셨나요?</p>
           </div>
           <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="숙소 예약하기" />
-          <span class="schedule__custom-box">
-            <svg class="schedule__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
+            fill="#fafafa"
+              />
+            </svg>
+          </span>
+        </label>
+      </li>
+      <li class="checklist__item">
+        <label for="passportCheck-3" class="checklist__label">
+          <div class="checklist__badge">
+            <svg class="checklist__badge-icon" aria-hidden="true" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.78843 10.85L0.50038 6.1C0.277726 5.9 0.277726 5.55 0.50038 5.3L1.33533 4.55C1.55799 4.35 1.94763 4.35 2.22595 4.55L6.23374 8.15L15.1399 0.15C15.3626 -0.05 15.7522 -0.05 16.0305 0.15L16.8655 0.9C17.0881 1.1 17.0881 1.45 16.8655 1.7L6.67904 10.85C6.40073 11.05 6.01108 11.05 5.78843 10.85Z" fill="#FF5B55"/>
+            </svg>
+            <span>필수</span>
+          </div>
+          <div class="checklist__text-box">
+            <strong class="checklist__item-title">환전 여부</strong>
+            <p class="checklist__description">현지 화폐로 환전은 넉넉히 하셨나요?</p>
+          </div>
+          <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="숙소 예약하기" />
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
+            fill="#fafafa"
+              />
+            </svg>
+          </span>
+        </label>
+      </li>
+      <li class="checklist__item">
+        <label for="passportCheck-3" class="checklist__label">
+          <div class="checklist__badge">
+            <svg class="checklist__badge-icon" aria-hidden="true" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.78843 10.85L0.50038 6.1C0.277726 5.9 0.277726 5.55 0.50038 5.3L1.33533 4.55C1.55799 4.35 1.94763 4.35 2.22595 4.55L6.23374 8.15L15.1399 0.15C15.3626 -0.05 15.7522 -0.05 16.0305 0.15L16.8655 0.9C17.0881 1.1 17.0881 1.45 16.8655 1.7L6.67904 10.85C6.40073 11.05 6.01108 11.05 5.78843 10.85Z" fill="#FF5B55"/>
+            </svg>
+            <span>필수</span>
+          </div>
+          <div class="checklist__text-box">
+            <strong class="checklist__item-title">수하물 규정 확인</strong>
+            <p class="checklist__description">기내 수하물 무게 확인하셨나요?</p>
+          </div>
+          <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="숙소 예약하기" />
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
+            fill="#fafafa"
+              />
+            </svg>
+          </span>
+        </label>
+      </li>
+      <li class="checklist__item">
+        <label for="passportCheck-3" class="checklist__label">
+          <div class="checklist__badge">
+            <svg class="checklist__badge-icon" aria-hidden="true" width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.78843 10.85L0.50038 6.1C0.277726 5.9 0.277726 5.55 0.50038 5.3L1.33533 4.55C1.55799 4.35 1.94763 4.35 2.22595 4.55L6.23374 8.15L15.1399 0.15C15.3626 -0.05 15.7522 -0.05 16.0305 0.15L16.8655 0.9C17.0881 1.1 17.0881 1.45 16.8655 1.7L6.67904 10.85C6.40073 11.05 6.01108 11.05 5.78843 10.85Z" fill="#FF5B55"/>
+            </svg>
+            <span>필수</span>
+          </div>
+          <div class="checklist__text-box">
+            <strong class="checklist__item-title">출국 시간</strong>
+            <p class="checklist__description">여권을 챙기셨나요?</p>
+          </div>
+          <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="숙소 예약하기" />
+          <span class="checklist__custom-box">
+            <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
             fill="#fafafa"
               />
