--- a/src/components/departure-checklist/departure-checklist.html
+++ b/src/components/departure-checklist/departure-checklist.html
@@ -23,7 +23,7 @@
     <ul class="checklist__list">
       <li class="checklist__item">
         <label for="passportCheck-1" class="checklist__label">
-          <input type="checkbox" id="passportCheck-1" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-1" name="passportCheck" aria-label="여권 유효기간 확인" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -45,7 +45,7 @@
       </li>
       <li class="checklist__item">
         <label for="passportCheck-2" class="checklist__label">
-          <input type="checkbox" id="passportCheck-2" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-2" name="passportCheck" aria-label="유심 구매 혹은 로밍 신청" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -61,13 +61,13 @@
           <span>필수</span>
         </div>
         <div class="checklist__text-box">
-          <strong class="checklist__item-title">여권 확인</strong>
-          <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
+          <strong class="checklist__item-title">유심 / 로밍</strong>
+          <p class="checklist__description">인터넷 사용 방법은 정하셨나요?</p>
         </div>
       </li>
       <li class="checklist__item">
         <label for="passportCheck-3" class="checklist__label">
-          <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-3" name="passportCheck" aria-label="현지 숙소 예약" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -83,13 +83,13 @@
           <span>필수</span>
         </div>
         <div class="checklist__text-box">
-          <strong class="checklist__item-title">여권 확인</strong>
-          <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
+          <strong class="checklist__item-title">숙소 예약</strong>
+          <p class="checklist__description">숙소 예약 바우처 할인 적용 확인하셨나요?</p>
         </div>
       </li>
       <li class="checklist__item">
         <label for="passportCheck-4" class="checklist__label">
-          <input type="checkbox" id="passportCheck-4" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-4" name="passportCheck" aria-label="현지 화폐 환전 여부" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -105,13 +105,13 @@
           <span>필수</span>
         </div>
         <div class="checklist__text-box">
-          <strong class="checklist__item-title">여권 확인</strong>
-          <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
+          <strong class="checklist__item-title">환전 여부</strong>
+          <p class="checklist__description">현지 화폐로 환전은 넉넉히 하셨나요?</p>
         </div>
       </li>
       <li class="checklist__item">
         <label for="passportCheck-5" class="checklist__label">
-          <input type="checkbox" id="passportCheck-5" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-5" name="passportCheck" aria-label="항공사 수하물 규정 확인" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -127,13 +127,13 @@
           <span>필수</span>
         </div>
         <div class="checklist__text-box">
-          <strong class="checklist__item-title">여권 확인</strong>
-          <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
+          <strong class="checklist__item-title">수하물 규정 확인</strong>
+          <p class="checklist__description">기내 수하물 무게 확인하셨나요?</p>
         </div>
       </li>
       <li class="checklist__item">
         <label for="passportCheck-6" class="checklist__label">
-          <input type="checkbox" id="passportCheck-6" name="passportCheck" aria-label="여권 확인" />
+          <input type="checkbox" id="passportCheck-6" name="passportCheck" aria-label="비행기 출발 시간 확인" />
           <span class="checklist__custom-box">
             <svg class="checklist__check-icon" aria-hidden="true" width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.45498 10.85L0.16693 6.1C-0.0557247 5.9 -0.0557247 5.55 0.16693 5.3L1.00188 4.55C1.22454 4.35 1.61418 4.35 1.8925 4.55L5.90028 8.15L14.8065 0.15C15.0291 -0.05 15.4188 -0.05 15.6971 0.15L16.532 0.9C16.7547 1.1 16.7547 1.45 16.532 1.7L6.34559 10.85C6.06728 11.05 5.67763 11.05 5.45498 10.85Z" 
@@ -149,8 +149,8 @@
           <span>필수</span>
         </div>
         <div class="checklist__text-box">
-          <strong class="checklist__item-title">여권 확인</strong>
-          <p class="checklist__description">유효 기간이 6개월 이상인가요?</p>
+          <strong class="checklist__item-title">출국 시간</strong>
+          <p class="checklist__description">여권을 챙기셨나요?</p>
         </div>
       </li>
     </ul>
