--- a/src/components/departure-checklist/departure-checklist.css
+++ b/src/components/departure-checklist/departure-checklist.css
@@ -53,7 +53,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px 25px;
-  border: .0625rem solid var(--gray-300);
+  border: 0.0625rem solid var(--gray-300);
   border-radius: 15px;
   padding: 25px;
   block-size: 310px;
@@ -163,7 +163,7 @@ body {
   .checklist__list {
     grid-template-columns: repeat(1, 1fr);
     block-size: 560px;
-    padding: 15px
+    padding: 15px;
   }
 
   .checklist__item {
@@ -203,7 +203,7 @@ body {
   .checklist {
     max-inline-size: 738px;
   }
-  
+
   .checklist__description {
     inline-size: 150px;
     display: block;
