--- a/src/components/exchange-rate/exchange-rate.html
+++ b/src/components/exchange-rate/exchange-rate.html
@@ -21,12 +21,10 @@
             >통화 선택</label
           >
           <select id="base-currency">
-            <option value="USD" data-symbol="달러">🇺🇸 미국 (USD)</option>
-            <option value="GBP" selected data-symbol="파운드">
-              🇬🇧 영국 (GBP)
-            </option>
-            <option value="EUR" data-symbol="유로">🇪🇺 유로 (EUR)</option>
-            <option value="JPY" data-symbol="엔">🇯🇵 일본 (JPY)</option>
+            <option value="USD" data-symbol="달러">미국</option>
+            <option value="GBP" selected data-symbol="파운드">영국</option>
+            <option value="EUR" data-symbol="유로">유로</option>
+            <option value="JPY" data-symbol="엔화">일본</option>
           </select>
           <div class="currency-labels">
             <span class="country-name">영국</span>
