--- a/src/components/map/map.html
+++ b/src/components/map/map.html
@@ -166,11 +166,11 @@
           </div>
           <div class="map__search-list">
             <div class="map__search-list--around is-activate">
-              <div class="map__search-list--filter">
+              <!-- <div class="map__search-list--filter">
                 <button type="button">거리순</button>
                 <button type="button">리뷰 많은 순</button>
                 <button type="button">예약 가능</button>
-              </div>
+              </div> -->
               <ul class="map__search-list--list"></ul>
             </div>
             <div class="map__search-list--saved"></div>
