--- a/src/components/etiquette/etiquette.css
+++ b/src/components/etiquette/etiquette.css
@@ -5,27 +5,27 @@ body {
 
 /* 에티켓 시작 */
 
-h3 {
-  font-size: 32px;
-  /* font-size: var(--fontSize32); */
-  font-weight: var(--bold);
-}
-
 .etiquette {
-  max-width: 100%;
+  width: 100%;
 }
 
 .etiquette__title {
-  display: flex;
-  align-items: center;
+  display: inline-flex;
+
+  h3 {
+    padding: 15px 0 15px 30px;
+    font-size: var(--fontSize22);
+  }
 }
 
-/* 나라 선별 라벨 선택 */
+
+/* ------------------------------------------------ */
+/*                 나라 선별 라벨 선택                  */
 /* ------------------------------------------------ */
 
 .etiquette__dropdown-horizontal {
-  position: relative;
   display: inline-block;
+  position: relative;
 }
 
 details summary {
@@ -38,111 +38,96 @@ summary::-webkit-details-marker {
 }
 
 .etiquette__label {
-  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  margin:17px 10px;
+  padding: 5px 12px;
+  border-radius: 10px;
   background-color: var(--blue-200);
   font-size: var(--fontSize12);
   font-weight: var(--bold);
   color: var(--white-fa);
-  padding: 5px 12px;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
 }
 
 .etiquette__options {
+  display: flex;
+  flex-direction: row;
   position: absolute;
   top: 50%;
   left: 120%;
   transform: translateY(-50%);
-  display: flex;
-  flex-direction: row;
   gap: 6px;
-  background: var(--white-fa);
+  margin: 0;
+  padding: 6px 8px;
   border: 1px solid var(--gray-200);
   border-radius: 10px;
-  padding: 6px 8px;
+  background: var(--white-fa);
   z-index: 1000; 
   white-space: nowrap;
-  margin: 0;
+
+  li {
+    list-style: none;
+  }
+
+  button {
+    padding: 4px 10px;
+    border: none;
+    border-radius: 5px;
+    background: none;
+    font-size: var(--fontSize14);
+    font-weight: var(--bold);
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      background-color : var(--blue-200);
+      color: var(--white-fa);
+      font-weight: var(--bold);  
+    }
+  }
 }
 
-.etiquette__options li {
-  list-style: none;
-}
-
-.etiquette__options button {
-  background: none;
-  border: none;
-  padding: 4px 10px;
-  font-size: var(--fontSize14);
-  font-weight: var(--bold);
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.etiquette__options button:hover,
-.etiquette__options button:focus {
-  background-color: var(--blue-200);
-  color: var(--white-fa);
-  font-weight: var(--bold);  
-}
 
 
-/* 카드 영역  */
 /* ------------------------------------------------ */
-.etiquette__card-container {
-  overflow:hidden;
-}
-.etiquette__contents {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 900px;
+/*                 캐러셀 카드 영역                   */
+/* ------------------------------------------------ */
 
-  margin-top: 2rem;
+.etiquette__contents {
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .etiquette__cards {
   display: flex;
-  gap: 1.8rem;
+  width: calc(100% * 4 );
+  max-height: 300px;
   transition: transform 0.4s ease;
-  flex-flow: row nowrap;
-  align-items: center;
-  will-change: transform;
-  width: 760px;
   transform: 0;
+  gap: 2rem;
 }
-
-/* 개별 카드 */
 
 .etiquette__card {
   display: flex;
-  flex-direction: row;
-  position: relative;
-  gap: 1.2rem; 
-  align-items: center;
-  box-sizing: border-box;
- 
+  overflow: hidden;
+  flex: 0 0 25%;
+  padding: 1rem;
   border: 1px solid var(--gray-300);
   border-radius: 10px;
- 
-  flex:0 0 365px;
-  width: 365px;
-  height: 250px; 
+  justify-content:space-around;
+  align-items: center;
 }
 
 .etiquette-img {
+  display: flex;
+  width: 30%;
+  height: 80%;
+  min-width: 80px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-
-  flex: 3;
-  width: 100%;
-  height: 100%;
-  min-width: 120px;
-  max-height: 150px;  
-  margin-left: 20px;
 }
 
 /* 개별 카드 이미지 삽입 */
@@ -159,50 +144,103 @@ summary::-webkit-details-marker {
   background-image: url(../../assets/images/etiquette-london-4_1x.webp); 
 }
 
-/* 개별 카드 텍스트 영역 */
-
 .etiquette__cardTxt {
-  flex: 5;
-  margin: 0 10px;
-  width: 100%;
-  min-width: 200px;
-  justify-content:start;
+  text-align: start;
+
+  h4 {
+    font-size: var(--fontSize26);
+  }
+
+  p {
+    margin-top: 1rem;
+    font-size: var(--fontSize12);
+    white-space: pre-line;
+    line-height: 1;
+  }
 }
 
-.etiquette__cardTxt h4 {
-  position: absolute;
-  top: 40px;
-  font-size: var(--fontSize24);
-}
-
-.etiquette-cardTxt p {
-  /* position: absolute; */
-  top: 80px;
-  font-size: var(--fontSize14);
-  margin-top: 10px;
-  white-space: pre-line;
-  line-height: 1;
-}
+/* 카드 nav 버튼 */
 
 .etiquette__nav {
   display: flex;
-  box-sizing:border-box;
+  position: absolute;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
+  padding: 1rem;
   border: none;
-  padding: 0;
   cursor: pointer;
-  z-index: 1;
+  z-index: 999;
+  box-sizing:border-box; 
+  flex-shrink: 0;
+  top:35%;
 }
 
 .prev {
-  position: absolute;
-  left: 25px;
+  left: 10px;
 }
 
 .next {
-  position: absolute;
-  right: 25px;
+  right: 10px;
 }
 
+@media (min-width: 768px) {
+  .etiquette__cards {
+    justify-content: center;
+    width: calc(25% * 4 );
+    height: 31.25dvh;
+  }
+  .etiquette__card {
+    flex: 0 0 47%;
+  }
+
+  .prev {
+    left:10px;
+  }
+
+  .next {
+    right: 10px;
+  }
+
+  .etiquette__cardTxt {
+  text-align: center;
+
+  h4 {
+    font-size: var(--fontSize24);
+  }
+
+  p {
+    font-size: var(--fontSize14);
+}
+  
+}
+
+@media (min-width: 1280px) {
+  .etiquette__cards {
+    justify-content: center;
+    width: calc(25% * 4 );
+    height: 31.25dvh;
+  }
+   .etiquette__card {
+    flex: 0 0 50%;
+  }
+
+  .prev {
+    left: 20px;
+  }
+
+  .next {
+    right: 20px;
+  }
+
+  .etiquette__cardTxt {
+  text-align: center;
+
+  h4 {
+    font-size: var(--fontSize24);
+  }
+
+  p {
+    font-size: var(--fontSize14);
+}
+  
+}
