--- a/src/pages/schedule-page/schedule-page.css
+++ b/src/pages/schedule-page/schedule-page.css
@@ -1,1 +1,86 @@
 @import './../../styles/main.css';
+
+:root {
+  --fontSize32: 32px;
+}
+
+.schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  max-inline-size: 980px;
+  block-size: 800px;
+  /* padding-block은 figma에서 확인할 수가 없어서 대략적으로 넣은 수치임 */
+  padding: 130px 80px;
+}
+
+.schedule__title {
+  font-size: var(--fontSize32);
+}
+
+.schedule__add-button {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--blue-200);
+  inline-size: 100%;
+  padding: 33px 47px 33px 40px;
+  border-radius: 10px;
+  transition: background-color 0.2s ease-out;
+}
+
+.schedule__add-button:hover {
+  background-color: var(--blue-100);
+}
+
+.schedule__add-button span {
+  font-size: var(--fontSize28);
+  font-weight: var(--bold);
+  color: var(--white-fa);
+}
+
+/* 일정 리스트 */
+.schedule__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.schedule-card {
+  border: 1px solid var(--gray-100);
+  border-radius: 15px;
+  padding: 37px;
+  transition: background-color 0.2s ease-in;
+}
+
+.schedule-card:hover {
+  background-color: var(--gray-100);
+}
+
+.schedule-card__link {
+  display: flex;
+  justify-content: space-between;
+}
+
+.schedule-card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.schedule-card__location {
+  font-size: var(--fontSize32);
+  font-weight: var(--semiBold);
+}
+
+.schedule-card__date {
+  font-size: var(--fontSize18);
+}
+
+.schedule-card__thumbnail {
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+/* 테블릿 */
+@media (max-width: 1279px) {
+}
